--- a/gradle.properties
+++ b/gradle.properties
@@ -21,4 +21,4 @@ mod_license=All Rights Reserved
 mod_version=1.0.0.0
 mod_group_id=com.marbledhubb.hallowcostumes
 mod_authors=MarbledNull, WereF0X
-mod_description=A mod that adds costumes of iconic horror characters
+mod_description=A mod that adds costumes of iconic horror characters and item props
